--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
