ready to deploy

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -92,6 +92,8 @@
     "not dead"
   ],
   "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": ["src/**/*.{vue,js,ts}"],
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel"
   }
 }
